[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Layers/LayerConfiguration/LayerUI.gd" type="Script" id=1]
[ext_resource path="res://Resources/Icons/ModernLandscapeLab/delete_file.svg" type="Texture2D" id=2]
[ext_resource path="res://UI/CustomElements/AutoIconButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Icons/ModernLandscapeLab/new_file.svg" type="Texture2D" id=4]
[ext_resource path="res://UI/Layers/LayerConfiguration/LayerUIConfig.gd" type="Script" id=5]
[ext_resource path="res://Resources/Icons/ModernLandscapeLab/filter.svg" type="Texture2D" id=6]

[node name="LayerUI" type="PanelContainer"]
offset_right = 260.0
offset_bottom = 498.0
scale = Vector2( 0.7, 0.7 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayerUIConfig" type="Node" parent="."]
script = ExtResource( 5 )
category = "LayerUI"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 14.0
offset_top = 14.0
offset_right = 246.0
offset_bottom = 484.0
size_flags_horizontal = 3

[node name="ScrollLayers" type="ScrollContainer" parent="VBoxContainer"]
offset_right = 232.0
offset_bottom = 422.0
minimum_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LayerContainer" type="VBoxContainer" parent="VBoxContainer/ScrollLayers"]
offset_right = 232.0
offset_bottom = 200.0
minimum_size = Vector2( 0, 200 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 430.0
offset_right = 232.0
offset_bottom = 470.0

[node name="NewLayer" parent="VBoxContainer/Menu" instance=ExtResource( 3 )]
offset_right = 40.0
offset_bottom = 40.0
icon = ExtResource( 4 )
texture_name = "new_file"

[node name="DeleteLayer" parent="VBoxContainer/Menu" instance=ExtResource( 3 )]
offset_left = 48.0
offset_right = 88.0
offset_bottom = 40.0
icon = ExtResource( 2 )
texture_name = "delete_file"

[node name="Filter" parent="VBoxContainer/Menu" instance=ExtResource( 3 )]
offset_left = 96.0
offset_right = 136.0
offset_bottom = 40.0
icon = ExtResource( 6 )
texture_name = "filter"

[node name="FilterOptions" type="PopupMenu" parent="VBoxContainer/Menu/Filter"]
offset_right = 40.0
offset_bottom = 40.0
